Fix problem with hortizontal overflow

--- a/css/scss-partials/_clean-tags.scss
+++ b/css/scss-partials/_clean-tags.scss
@@ -9,6 +9,7 @@ body {
   font-family: 'Lato', sans-serif;
   color: #fff;
   background-color: variables.$primaryBgColor;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
