--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   font-family: "Lato", sans-serif;
   color: #fff;
   background-color: #3a3a3a;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
